# django-backend-starter

./: .env  .env.example  .gitignore  main.py  pyproject.toml  schema.yml
apps/products/: filters.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_initial.py
apps/users/migrations/: 0001_initial.py
starter/: settings.py  urls.py
